exports[`Axis [common] example testing should match snapshot for 2.bottom 1`] = `
<svg
  height={50}
  width={400}>
  <g
    transform="translate(20, 25)">
    <Axis
      innerTickSize={6}
      orient="bottom"
      outerTickSize={6}
      scale={[Function]}
      tickCount={6}
      tickPadding={3} />
  </g>
</svg>
`;

exports[`Axis [common] example testing should match snapshot for 3.top 1`] = `
<svg
  height={50}
  width={400}>
  <g
    transform="translate(20, 25)">
    <Axis
      innerTickSize={6}
      orient="top"
      outerTickSize={6}
      scale={[Function]}
      tickCount={6}
      tickPadding={3} />
  </g>
</svg>
`;

exports[`Axis [common] example testing should match snapshot for 4.left 1`] = `
<svg
  height={200}
  width={50}>
  <g
    transform="translate(49, 10)">
    <Axis
      innerTickSize={6}
      orient="left"
      outerTickSize={6}
      scale={[Function]}
      tickCount={null}
      tickPadding={3} />
  </g>
</svg>
`;

exports[`Axis [common] example testing should match snapshot for 5.right 1`] = `
<svg
  height={200}
  width={50}>
  <g
    transform="translate(0, 10)">
    <Axis
      innerTickSize={6}
      orient="right"
      outerTickSize={6}
      scale={[Function]}
      tickCount={null}
      tickPadding={3} />
  </g>
</svg>
`;

exports[`Axis [common] example testing should match snapshot for 6.time 1`] = `
<svg
  height={200}
  width={400}>
  <g
    transform="translate(30, 1)">
    <Axis
      innerTickSize={6}
      orient="bottom"
      outerTickSize={6}
      scale={[Function]}
      tickCount={null}
      tickPadding={3} />
  </g>
  <g
    transform="translate(30, 66.66666666666667)">
    <Axis
      innerTickSize={6}
      orient="bottom"
      outerTickSize={6}
      scale={[Function]}
      tickCount={null}
      tickPadding={3}
      ticks={
        Array [
          2015-01-01T08:00:00.000Z,
          2015-07-01T07:00:00.000Z,
          2016-01-01T08:00:00.000Z,
          2016-07-01T07:00:00.000Z,
          2017-01-01T08:00:00.000Z,
        ]
      } />
  </g>
  <g
    transform="translate(30, 133.33333333333334)">
    <Axis
      innerTickSize={6}
      orient="bottom"
      outerTickSize={6}
      scale={[Function]}
      tickCount={null}
      tickPadding={3}
      ticks={
        Array [
          2015-01-01T08:00:00.000Z,
          2016-01-01T08:00:00.000Z,
          2017-01-01T08:00:00.000Z,
        ]
      } />
  </g>
</svg>
`;

exports[`Axis [common] example testing should match snapshot for 7.ordinal 1`] = `
<svg
  height={40}
  width={400}>
  <g
    transform="translate(20, 1)">
    <Axis
      innerTickSize={6}
      orient="bottom"
      outerTickSize={6}
      scale={[Function]}
      tickCount={null}
      tickPadding={3} />
  </g>
</svg>
`;
